<resources>
    <string name="app_name">Cheap</string>
    <string name="version" translatable="false">1.0.0</string>
    <string name="facebook_app_id" translatable="false">245836276287371</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb245836276287371</string>
    <string name="Tell_us">Tell us who you are ...</string>
    <string name="your_name">Your Name</string>
    <string name="your_lastname">Your LastName</string>
    <string name="your_address">Your Address</string>
    <string name="your_location">Your Location</string>
    <string name="your_mail">Your Mail</string>
    <string name="your_facebook">Your Facebook</string>
    <string name="your_google">Your Google</string>
    <string name="sing_in">Sing In</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="store">Store</string>
    <string name="stores">Stores</string>
    <string name="product">Product</string>
    <string name="update">Update</string>
    <string name="updated">Updated</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="empty_stores">Empty Stores</string>
    <string name="create">Create</string>
    <string name="select">Select ...</string>
    <string name="redInfo">Check the fields in red</string>
    <string name="created">Created</string>
    <string name="update_store">Update Store</string>
    <string name="products">Products</string>
    <string name="empty_products">Empty Products</string>
    <string name="bar_code">Bar Code</string>
    <string name="trademark">Trademark</string>
    <string name="measure">Measure</string>
    <string name="weight_size">Weight/Size</string>
    <string name="update_product">Update Product</string>
    <string name="already_assigned">Barcode already assigned</string>
    <string name="shopping">Shopping</string>
    <string name="record_price">Record Price</string>
    <string name="record_price_store">Record Price/Store</string>
    <string name="record_price_product">Record Price/Product</string>
    <string name="price">Price</string>
    <string name="equivalent_price">Equivalent Price</string>
    <string name="product_without_price">Product without price</string>
    <string name="fail">Fail</string>
    <string name="do_you_want">Do you want ...</string>
    <string name="choose_how">Choose how to read the barcode</string>
    <string name="scanner" translatable="false">Scanner</string>
    <string name="type">Type</string>
    <string name="empty_shopping">Empty Shopping</string>
    <string name="use_this_price">Use this price for the purchase?</string>
    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="total">Total</string>
    <string name="product_no_found">Product no Found</string>
    <string name="total_purchase">Total Purchase</string>
    <string name="no_scan_data_received">No scan data received</string>
    <string name="modify_or_delete">Modify or delete selected item</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="finalized_shopping">Finalized Shopping</string>
    <string name="total_of_shopping">The total of shopping is $%1$s</string>
    <string name="compare_price_by_product">Compare price by product</string>
    <string name="shopping_list">Shopping List</string>
    <string name="highest_price">Highest Price</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="date_shopping">Date of Shopping</string>
    <string name="registration_date">Registration Date</string>
    <string name="last_purchase">Date last purchase</string>
    <string name="kilograms">Kilograms</string>
    <string name="grams">Grams</string>
    <string name="milligrams">Milligrams</string>
    <string name="meters">Meters</string>
    <string name="centimeters">Centimeters</string>
    <string name="millimeters">Millimeters</string>
    <string name="liters">Liters</string>
    <string name="milliliters">Milliliters</string>
    <string name="this_product_can_be_cheaper">This product can be cheaper($ %1$s) in %2$s</string>
    <string name="i_have_read_and_accept">I have read and accept the privacy policy and data processing</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_rationale_location" translatable="false">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied" translatable="false">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast" translatable="false">Location permission is required for this demo.</string>
    <string name="select_this_place">select this place?</string>
    <string name="residency">Residency</string>
    <string name="register_your_location">Register your location</string>
    <string name="remember_to_register_your_location">Remember to register your location in your profile</string>
    <string name="registered_user">Registered User</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="location_without_address">Location without address</string>
    <string name="same_address">Remember ... there can not be two stores with the same address.</string>
    <string name="profileD">Edit your personal information</string>
    <string name="storeD">Create and edit the stores in which you buy</string>
    <string name="productD">Create and edit the products you buy</string>
    <string name="record_priceD">Register prices for your products in the stores where you buy</string>
    <string name="shoppingD">Take control of your purchases</string>
    <string name="compare_price_by_productD">Find who sells cheapest</string>
    <string name="shopping_listD">What have you bought ... where ... when</string>
    <string name="title_activity_mapsD">Where are you? Where are your stores?</string>
    <string name="title_desk">Desk</string>
    <string name="title_comparisons">Comparisons</string>
    <string name="we_will_not_be" translatable="true">We will not be able to take your information when you buy the rest of the components</string>


</resources>
